<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.WeatherActivity" >

    <item
        android:id="@+id/cur_loc_id"
        android:orderInCategory="1"
        android:title="@string/current_location"
        app:showAsAction="always"/>
    <item
        android:id="@+id/change_city"
        android:orderInCategory="2"
        android:title="@string/change_city"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/insert_data"
        android:orderInCategory="3"
        android:title="@string/insert_data"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/get_all_forecast_by_city"
        android:orderInCategory="5"
        android:title="@string/get_all_forecast_by_city"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_city"
        android:orderInCategory="7"
        android:title="@string/delete_city"
        app:showAsAction="ifRoom"/>



</menu>