<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.newweatherapp.com.example.weatherwithfragment.WeekModeWeatherActivity" >

    <item
        android:id="@+id/change_city"
        android:orderInCategory="1"
        android:title="@string/change_city"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/insert_data"
        android:orderInCategory="1"
        android:title="@string/insert_data"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete_city"
        android:orderInCategory="1"
        android:title="@string/delete_city"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/one_day_forecast"
        android:orderInCategory="1"
        android:title="@string/one_day_forecast"
        app:showAsAction="ifRoom"/>

</menu>